--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  primary:    #2575ff,
+  secondary:  #04ce0e,
+  danger:     #ec0303,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  laranja:    rgba(243, 219, 2, 0.842),
+  lilas:      rgba(94, 6, 94, 0.842),
 );
 
 
