--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,7 @@ $colors: (
   dark:       #222,
   laranja:    rgba(243, 219, 2, 0.842),
   lilas:      rgba(94, 6, 94, 0.842),
+  red:        rgb(180, 0, 0),
 );
 
 
