--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,32 @@
+.item-md ion-icon[item-left], .item-md ion-icon[item-right], .item-md ion-icon[item-start], .item-md ion-icon[item-end] {
+    margin-left: 0;
+    margin-top: 21px;
+    margin-bottom: 10px;
+}
+
 page-home {
+    
+
+    .cor {
+        color: #ffffff;
+        font-size: 13px;
+        font-weight: lighter;
+    }
 
 }
+
+.icone {
+
+    font-size: 16px !important;
+    font-weight: lighter !important;
+    
+}
+
+.tamanho {
+
+    font-size: 13px !important;
+    font-weight: lighter !important;
+    
+}
+
+
